LLVMInterface/LLVMInterface/ManagedContext.h

struct ManagedContext
{
    llvm::Module* M;
    llvm::LLVMContext* context;
    llvm::Type* stringTy = 0;
    llvm::IRBuilder<>* builder = 0;
    AllocationRemovingPass* arp = 0;

    ManagedContext(const char* name, const char* filename );
    ~ManagedContext();

};
EXTERN_API(llvm::Constant)* False(ManagedContext* ctx);
EXTERN_API(llvm::Constant)* getFloat(ManagedContext* ctx, float val);
EXTERN_API(llvm::Constant)* getDouble(ManagedContext* ctx, double val);
EXTERN_API(llvm::Constant)* getNullPtr(ManagedContext* ctx);
EXTERN_API(llvm::Constant)* getAllZeroValue(ManagedContext* ctx, llvm::Type* ty);
EXTERN_API(llvm::Constant)* getAllOnesValue(ManagedContext* ctx, llvm::Type* ty);
EXTERN_API(llvm::Constant)* getConstantStruct(ManagedContext* ctx, llvm::Type* ty, llvm::Constant** values, uint32_t valuec);
EXTERN_API(llvm::Value)* getStructValue(ManagedContext* ctx, llvm::Type* ty, llvm::Value** values, uint32_t valuec, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* getCall(ManagedContext* ctx, llvm::Function* fn, llvm::Value** args, uint32_t argc, llvm::IRBuilder<>* irb);
EXTERN_API(void) branch(ManagedContext* ctx, llvm::BasicBlock* dest, llvm::IRBuilder<>* irb);
EXTERN_API(void) conditionalBranch(ManagedContext* ctx, llvm::BasicBlock* destTrue, llvm::BasicBlock* destFalse, llvm::Value* cond, llvm::IRBuilder<>* irb);
EXTERN_API(void) unreachable(ManagedContext* ctx, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* conditionalSelect(ManagedContext* ctx, llvm::Value* valTrue, llvm::Value* valFalse, llvm::Value* cond, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* extractValue(ManagedContext* ctx, llvm::Value* aggregate, uint32_t index, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* extractNestedValue(ManagedContext* ctx, llvm::Value* aggregate, uint32_t* indices, uint32_t idxCount, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* isNotNull(ManagedContext* ctx, llvm::Value* val, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* getSizeOf(ManagedContext* ctx, llvm::Type* ty);
EXTERN_API(llvm::Value)* getI32SizeOf(ManagedContext* ctx, llvm::Type* ty);
EXTERN_API(llvm::Value)* getI64SizeOf(ManagedContext* ctx, llvm::Type* ty);
EXTERN_API(llvm::Value)* getMin(ManagedContext* ctx, llvm::Value* v1, llvm::Value* v2, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* getMax(ManagedContext* ctx, llvm::Value* v1, llvm::Value* v2, bool isUnsigned, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* memoryCopy(ManagedContext* ctx, llvm::Value* dest, llvm::Value* src, llvm::Value* byteCount, bool isVolatile, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* memoryMove(ManagedContext* ctx, llvm::Value* dest, llvm::Value* src, llvm::Value* byteCount, bool isVolatile, llvm::IRBuilder<>* irb);
EXTERN_API(bool) currentBlockIsTerminated(ManagedContext* ctx, llvm::IRBuilder<>* irb);
EXTERN_API(bool) currentBlockHasPredecessor(ManagedContext* ctx, llvm::IRBuilder<>* irb);
EXTERN_API(uint32_t) currentBlockCountPredecessors(ManagedContext* ctx, llvm::IRBuilder<>* irb);
EXTERN_API(void) currentBlockGetPredecessors(ManagedContext* ctx, llvm::IRBuilder<>* irb, llvm::BasicBlock** bbs, uint32_t bbc);
EXTERN_API(llvm::BasicBlock)* getCurrentBasicBlock(ManagedContext* ctx, llvm::IRBuilder<>* irb);
EXTERN_API(void) optimize(ManagedContext* ctx, uint8_t optLvl, uint8_t maxIterations);