LLVMCodeGenerator/LLVMCodeGenerator/ManagedContext.cs

        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr False (IntPtr ctx);
        public IntPtr False () {
            return False(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getFloat (IntPtr ctx, float val);
        public static IntPtr GetFloat (IntPtr ctx, float val) {
            return getFloat(ctx, val);
        }
        public IntPtr GetFloat (float val) {
            return getFloat(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getDouble (IntPtr ctx, double val);
        public static IntPtr GetDouble (IntPtr ctx, double val) {
            return getDouble(ctx, val);
        }
        public IntPtr GetDouble (double val) {
            return getDouble(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getNullPtr (IntPtr ctx);
        public static IntPtr GetNullPtr (IntPtr ctx) {
            return getNullPtr(ctx);
        }
        public IntPtr GetNullPtr () {
            return getNullPtr(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getAllZeroValue (IntPtr ctx, IntPtr ty);
        public static IntPtr GetAllZeroValue (IntPtr ctx, IntPtr ty) {
            return getAllZeroValue(ctx, ty);
        }
        public IntPtr GetAllZeroValue (IntPtr ty) {
            return getAllZeroValue(Instance, ty);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getAllOnesValue (IntPtr ctx, IntPtr ty);
        public static IntPtr GetAllOnesValue (IntPtr ctx, IntPtr ty) {
            return getAllOnesValue(ctx, ty);
        }
        public IntPtr GetAllOnesValue (IntPtr ty) {
            return getAllOnesValue(Instance, ty);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getConstantStruct (IntPtr ctx, IntPtr ty, IntPtr[] values, uint valuec);
        public static IntPtr GetConstantStruct (IntPtr ctx, IntPtr ty, IntPtr[] values) {
            return getConstantStruct(ctx, ty, values, (uint)values.Length);
        }
        public IntPtr GetConstantStruct (IntPtr ty, IntPtr[] values) {
            return getConstantStruct(Instance, ty, values, (uint)values.Length);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getStructValue (IntPtr ctx, IntPtr ty, IntPtr[] values, uint valuec, IntPtr irb);
        public static IntPtr GetStructValue (IntPtr ctx, IntPtr ty, IntPtr[] values, IntPtr irb) {
            return getStructValue(ctx, ty, values, (uint)values.Length, irb);
        }
        public IntPtr GetStructValue (IntPtr ty, IntPtr[] values, IntPtr irb) {
            return getStructValue(Instance, ty, values, (uint)values.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getCall (IntPtr ctx, IntPtr fn, IntPtr[] args, uint argc, IntPtr irb);
        public static IntPtr GetCall (IntPtr ctx, IntPtr fn, IntPtr[] args, IntPtr irb) {
            return getCall(ctx, fn, args, (uint)args.Length, irb);
        }
        public IntPtr GetCall (IntPtr fn, IntPtr[] args, IntPtr irb) {
            return getCall(Instance, fn, args, (uint)args.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void branch (IntPtr ctx, IntPtr dest, IntPtr irb);
        public static void Branch (IntPtr ctx, IntPtr dest, IntPtr irb) {
            branch(ctx, dest, irb);
        }
        public void Branch (IntPtr dest, IntPtr irb) {
            branch(Instance, dest, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void conditionalBranch (IntPtr ctx, IntPtr destTrue, IntPtr destFalse, IntPtr cond, IntPtr irb);
        public static void ConditionalBranch (IntPtr ctx, IntPtr destTrue, IntPtr destFalse, IntPtr cond, IntPtr irb) {
            conditionalBranch(ctx, destTrue, destFalse, cond, irb);
        }
        public void ConditionalBranch (IntPtr destTrue, IntPtr destFalse, IntPtr cond, IntPtr irb) {
            conditionalBranch(Instance, destTrue, destFalse, cond, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void unreachable (IntPtr ctx, IntPtr irb);
        public static void Unreachable (IntPtr ctx, IntPtr irb) {
            unreachable(ctx, irb);
        }
        public void Unreachable (IntPtr irb) {
            unreachable(Instance, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr conditionalSelect (IntPtr ctx, IntPtr valTrue, IntPtr valFalse, IntPtr cond, IntPtr irb);
        public static IntPtr ConditionalSelect (IntPtr ctx, IntPtr valTrue, IntPtr valFalse, IntPtr cond, IntPtr irb) {
            return conditionalSelect(ctx, valTrue, valFalse, cond, irb);
        }
        public IntPtr ConditionalSelect (IntPtr valTrue, IntPtr valFalse, IntPtr cond, IntPtr irb) {
            return conditionalSelect(Instance, valTrue, valFalse, cond, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr extractValue (IntPtr ctx, IntPtr aggregate, uint index, IntPtr irb);
        public static IntPtr ExtractValue (IntPtr ctx, IntPtr aggregate, uint index, IntPtr irb) {
            return extractValue(ctx, aggregate, index, irb);
        }
        public IntPtr ExtractValue (IntPtr aggregate, uint index, IntPtr irb) {
            return extractValue(Instance, aggregate, index, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr extractNestedValue (IntPtr ctx, IntPtr aggregate, uint[] indices, uint idxCount, IntPtr irb);
        public static IntPtr ExtractNestedValue (IntPtr ctx, IntPtr aggregate, uint[] indices, IntPtr irb) {
            return extractNestedValue(ctx, aggregate, indices, (uint)indices.Length, irb);
        }
        public IntPtr ExtractNestedValue (IntPtr aggregate, uint[] indices, IntPtr irb) {
            return extractNestedValue(Instance, aggregate, indices, (uint)indices.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr isNotNull (IntPtr ctx, IntPtr val, IntPtr irb);
        public static IntPtr IsNotNull (IntPtr ctx, IntPtr val, IntPtr irb) {
            return isNotNull(ctx, val, irb);
        }
        public IntPtr IsNotNull (IntPtr val, IntPtr irb) {
            return isNotNull(Instance, val, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getSizeOf (IntPtr ctx, IntPtr ty);
        public static IntPtr GetSizeOf (IntPtr ctx, IntPtr ty) {
            return getSizeOf(ctx, ty);
        }
        public IntPtr GetSizeOf (IntPtr ty) {
            return getSizeOf(Instance, ty);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getI32SizeOf (IntPtr ctx, IntPtr ty);
        public static IntPtr GetI32SizeOf (IntPtr ctx, IntPtr ty) {
            return getI32SizeOf(ctx, ty);
        }
        public IntPtr GetI32SizeOf (IntPtr ty) {
            return getI32SizeOf(Instance, ty);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getI64SizeOf (IntPtr ctx, IntPtr ty);
        public static IntPtr GetI64SizeOf (IntPtr ctx, IntPtr ty) {
            return getI64SizeOf(ctx, ty);
        }
        public IntPtr GetI64SizeOf (IntPtr ty) {
            return getI64SizeOf(Instance, ty);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getMin (IntPtr ctx, IntPtr v1, IntPtr v2, bool isUnsigned, IntPtr irb);
        public static IntPtr GetMin (IntPtr ctx, IntPtr v1, IntPtr v2, bool isUnsigned, IntPtr irb) {
            return getMin(ctx, v1, v2, isUnsigned, irb);
        }
        public IntPtr GetMin (IntPtr v1, IntPtr v2, bool isUnsigned, IntPtr irb) {
            return getMin(Instance, v1, v2, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getMax (IntPtr ctx, IntPtr v1, IntPtr v2, bool isUnsigned, IntPtr irb);
        public static IntPtr GetMax (IntPtr ctx, IntPtr v1, IntPtr v2, bool isUnsigned, IntPtr irb) {
            return getMax(ctx, v1, v2, isUnsigned, irb);
        }
        public IntPtr GetMax (IntPtr v1, IntPtr v2, bool isUnsigned, IntPtr irb) {
            return getMax(Instance, v1, v2, isUnsigned, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr memoryCopy (IntPtr ctx, IntPtr dest, IntPtr src, IntPtr byteCount, bool isVolatile, IntPtr irb);
        public static IntPtr MemoryCopy (IntPtr ctx, IntPtr dest, IntPtr src, IntPtr byteCount, bool isVolatile, IntPtr irb) {
            return memoryCopy(ctx, dest, src, byteCount, isVolatile, irb);
        }
        public IntPtr MemoryCopy (IntPtr dest, IntPtr src, IntPtr byteCount, bool isVolatile, IntPtr irb) {
            return memoryCopy(Instance, dest, src, byteCount, isVolatile, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr memoryMove (IntPtr ctx, IntPtr dest, IntPtr src, IntPtr byteCount, bool isVolatile, IntPtr irb);
        public static IntPtr MemoryMove (IntPtr ctx, IntPtr dest, IntPtr src, IntPtr byteCount, bool isVolatile, IntPtr irb) {
            return memoryMove(ctx, dest, src, byteCount, isVolatile, irb);
        }
        public IntPtr MemoryMove (IntPtr dest, IntPtr src, IntPtr byteCount, bool isVolatile, IntPtr irb) {
            return memoryMove(Instance, dest, src, byteCount, isVolatile, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool currentBlockIsTerminated (IntPtr ctx, IntPtr irb);
        public static bool CurrentBlockIsTerminated (IntPtr ctx, IntPtr irb) {
            return currentBlockIsTerminated(ctx, irb);
        }
        public bool CurrentBlockIsTerminated (IntPtr irb) {
            return currentBlockIsTerminated(Instance, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool currentBlockHasPredecessor (IntPtr ctx, IntPtr irb);
        public static bool CurrentBlockHasPredecessor (IntPtr ctx, IntPtr irb) {
            return currentBlockHasPredecessor(ctx, irb);
        }
        public bool CurrentBlockHasPredecessor (IntPtr irb) {
            return currentBlockHasPredecessor(Instance, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern uint currentBlockCountPredecessors (IntPtr ctx, IntPtr irb);
        public static uint CurrentBlockCountPredecessors (IntPtr ctx, IntPtr irb) {
            return currentBlockCountPredecessors(ctx, irb);
        }
        public uint CurrentBlockCountPredecessors (IntPtr irb) {
            return currentBlockCountPredecessors(Instance, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void currentBlockGetPredecessors (IntPtr ctx, IntPtr irb, IntPtr[] bbs, uint bbc);
        public static void CurrentBlockGetPredecessors (IntPtr ctx, IntPtr irb, IntPtr[] bbs) {
            currentBlockGetPredecessors(ctx, irb, bbs, (uint)bbs.Length);
        }
        public void CurrentBlockGetPredecessors (IntPtr irb, IntPtr[] bbs) {
            currentBlockGetPredecessors(Instance, irb, bbs, (uint)bbs.Length);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getCurrentBasicBlock (IntPtr ctx, IntPtr irb);
        public static IntPtr GetCurrentBasicBlock (IntPtr ctx, IntPtr irb) {
            return getCurrentBasicBlock(ctx, irb);
        }
        public IntPtr GetCurrentBasicBlock (IntPtr irb) {
            return getCurrentBasicBlock(Instance, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void optimize (IntPtr ctx, byte optLvl, byte maxIterations);
